--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,14 @@ jobs:
       - name: Get the output
         run: echo "${{ steps.render.outputs.result }}"
 
+      - name: log the WEBHOOK_URL
+        run: echo ${{ secrets.WEBHOOK_URL }}
+
       - name: Send data to webhook url
         uses: jasongitmail/fast-webhook@v1
         with:
         url: ${{ secrets.WEBHOOK_URL }}
         json: '{"foo": "bar"}'
-        run: echo ${{ secrets.WEBHOOK_URL }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
