--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ jobs:
           npm install
           npm run build
 
-      - name: JSON to variables
-        uses: antifree/json-to-variables@v1.0.1
+      - name: Read package.json
+        id: package
+        uses: juliangruber/read-file-action@v1
         with:
-          filename: './public/gatsby-posts.json'
-          prefix: test
+          path: ./public/gatsby-posts.json
           
-      - name: Show output
-        run: echo "The time was ${{ env.test_value }}, ${{ env.test_array_0_value }}, ${{ env.test_obj_value1 }}"
+      - name: Echo package.json
+        run: echo "${{ steps.package.outputs.content }}"
 
       - name: Send data to webhook url
         uses: jasongitmail/fast-webhook@v1
