--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Get commit changes
         id: file_changes
         uses: trilom/file-changes-action@v1.2.3
+        with:
+          githubRepo: liweili50/liweili50.github.io
 
       - name: Make a HTTP Request
         uses: actionsflow/axios@v1
