--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,10 @@ jobs:
           method: POST
           body: |
             {
-              "modified":"${{ steps.file_changes.outputs.files_modified }}",
-              "added": "${{ steps.file_changes.outputs.files_added}}",
-              "removed": "${{ steps.file_changes.outputs.files_removed}}",
-              "posts":"${{ steps.package.outputs.content }}"
+              "modified":${{ steps.file_changes.outputs.files_modified }},
+              "added":${{ steps.file_changes.outputs.files_added}},
+              "removed":${{ steps.file_changes.outputs.files_removed}},
+              "posts":${{ steps.package.outputs.content }}
             }
 
       - name: Deploy 🚀
